<resources>
    <string name="app_name">AsyncTascRetrofit</string>
    <string name="api_key">f06c3e4844cbfcd45efad66f15112ca2</string>
    <string name="may_n2019">May\n2019</string>
    <string name="May2019">May\n2019</string>
    <string name="_29">29</string>
    <string name="california_us">California, US</string>
    <string name="now">Now</string>
    <string name="today">Today</string>
    <string name="_21">21°</string>
    <string name="_28">28°</string>
    <string name="_18">%1s°</string>
    <string name="little_cloud">Little Cloud</string>
    <string name="max">Max</string>
    <string name="min">Min</string>
    <string name="this_week">This Week</string>
    <string name="_30">30</string>
    <string name="_31">31</string>
    <string name="_1_6">1/6</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_5">5</string>
    <string name="_28_n17">28°\n17°</string>
    <string name="wind">Wind</string>
    <string name="pressure">Pressure</string>
    <string name="sw_4m_s">%1sm/s</string>
    <string name="_1010mb" >%1smb</string>
    <string name="humidity">Humidity</string>
    <string name="_81">%1$d%%</string> // percent
    <string name="_100">100%</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">sunset</string>
    <string name="_6_00">6:00</string>
    <string name="_20_31">20:31</string>
    <string name="hallo">Hallo!</string>
    <string name="go">go</string>

</resources>