<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="wrap_content">


    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

       <androidx.constraintlayout.widget.ConstraintLayout
           android:id="@+id/constr"
           android:background="@color/dark"
           android:layout_width="match_parent"
           android:layout_height="146dp"/>

        <TextView
            android:id="@+id/Date"
           app:layout_constraintTop_toTopOf="@id/constr"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/constr"
            android:layout_marginBottom="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="64dp"
            android:textColor="@color/white"
            android:text="@string/May2019"
            android:layout_width="264dp"
            android:layout_height="42dp"
            android:layout_marginStart="91dp"
            android:layout_marginEnd="20dp"
            android:textSize="16sp"
            android:gravity="top" />

        <TextView
            android:id="@+id/DateSecond"
            android:layout_width="63dp"
            android:layout_height="wrap_content"
            android:textSize="48sp"
            android:text="@string/_29"
            android:gravity="top"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="@id/constr"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/constr"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="292dp"
            app:layout_goneMarginBottom="40dp"/>

        <ImageView
            android:id="@+id/Location"
            android:src="@drawable/ic_location"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:layout_constraintTop_toBottomOf="@id/constr"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="331dp"
            />

        <TextView
            android:id="@+id/LocationSecond"
            android:layout_width="307dp"
            android:layout_height="24dp"
            android:textSize="16sp"
            android:text="@string/california_us"
            android:gravity="top"
            app:layout_constraintTop_toBottomOf="@id/constr"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            />
        <ImageView
            android:id="@+id/cloudmain"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:src="@drawable/ic_littlecolud"
            app:layout_constraintTop_toBottomOf="@id/constr"
            android:layout_marginTop="64dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="283dp"/>
        
        <TextView
            android:id="@+id/now"
            android:layout_width="27dp"
            android:layout_height="14dp"
            app:layout_constraintTop_toBottomOf="@id/constr"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="12sp"
            android:text="@string/now"
            android:textColor="@color/black"
            android:layout_marginTop="156dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="328dp"/>

        <TextView
            android:id="@+id/today"
            android:layout_width="37dp"
            android:layout_height="14dp"
            app:layout_constraintTop_toBottomOf="@id/constr"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="12sp"
            android:text="@string/today"
            android:textColor="@color/black"
            android:layout_marginTop="156dp"
            android:layout_marginStart="109dp"
            android:layout_marginEnd="229dp"/>

        <TextView
            android:id="@+id/numberOne"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/constr"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="24sp"
            android:text="@string/_21"
            android:textColor="@color/black"
            android:layout_marginTop="186dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="315dp"/>

        <TextView
            android:id="@+id/numberTWo"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/constr"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="24sp"
            android:text="@string/_28"
            android:textColor="@color/black"
            android:layout_marginTop="186dp"
            android:layout_marginStart="109dp"
            android:layout_marginEnd="224dp"/>

        <TextView
            android:id="@+id/numberThird"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/constr"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="24sp"
            android:text="@string/_18"
            android:textColor="@color/black"
            android:layout_marginTop="186dp"
            android:layout_marginStart="159dp"
            android:layout_marginEnd="179dp"/>


        <TextView
            android:id="@+id/LittleCloud"
            android:layout_width="65dp"
            android:layout_height="14dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/constr"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="12sp"
            android:text="@string/little_cloud"
            android:textColor="@color/black"
            android:layout_marginTop="216dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="290dp"/>

        <TextView
            android:id="@+id/max"
            android:layout_width="24dp"
            android:layout_height="14dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/constr"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="12sp"
            android:text="@string/max"
            android:textColor="@color/black"
            android:layout_marginTop="216dp"
            android:layout_marginStart="110dp"
            android:layout_marginEnd="239dp"/>

        <TextView
            android:id="@+id/min"
            android:layout_width="21dp"
            android:layout_height="14dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/constr"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="12sp"
            android:text="@string/min"
            android:textColor="@color/black"
            android:layout_marginTop="216dp"
            android:layout_marginStart="160dp"
            android:layout_marginEnd="193dp"/>



        <TextView
            android:id="@+id/week"
            android:layout_width="62dp"
            android:layout_height="14dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/constr"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="12sp"
            android:text="@string/this_week"
            android:textColor="@color/black"
            android:layout_marginTop="248dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="293dp"/>
        
        
        <ImageView
            android:id="@+id/cloudy"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_cloudy"
            app:layout_constraintTop_toBottomOf="@id/constr"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="278dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="331dp"/>


        <ImageView
            android:id="@+id/rainy"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_rainy"
            app:layout_constraintTop_toBottomOf="@id/constr"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="278dp"
            android:layout_marginStart="72dp"
            android:layout_marginEnd="279dp"/>


        <ImageView
            android:id="@+id/cloudFirst"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_littlecolud"
            app:layout_constraintTop_toBottomOf="@id/constr"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="278dp"
            android:layout_marginStart="124dp"
            android:layout_marginEnd="227dp"/>


        <ImageView
            android:id="@+id/cloudSecond"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_littlecolud"
            app:layout_constraintTop_toBottomOf="@id/constr"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="278dp"
            android:layout_marginStart="176dp"
            android:layout_marginEnd="175dp"/>

        <ImageView
            android:id="@+id/cloudThree"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_littlecolud"
            app:layout_constraintTop_toBottomOf="@id/constr"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="278dp"
            android:layout_marginStart="228dp"
            android:layout_marginEnd="123dp"/>
        <ImageView
            android:id="@+id/cloudFour"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_littlecolud"
            app:layout_constraintTop_toBottomOf="@id/constr"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="278dp"
            android:layout_marginStart="280dp"
            android:layout_marginEnd="71dp"/>

        <ImageView
            android:id="@+id/cloudFive"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_littlecolud"
            app:layout_constraintTop_toBottomOf="@id/constr"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="278dp"
            android:layout_marginStart="332dp"
            android:layout_marginEnd="19dp"/>




        




    </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>